[package]
name = "sqfs"
version = "0.0.1"
authors = ["Emil Renner Berthing <esmil@mailme.dk>"]
edition = "2018"

[dependencies]
time = "*"
clap = "*"
byteorder = "*"
libc = "*"
libz-sys = "*"
lzma-sys = "*"
rust-lzo = "*"
lz4-sys = "*"
yaml-rust = "*"
virtfs = { path = "../virtfs" }

[lib]
name = "squashfs"

[[bin]]
name = "sqfs"
